# DllInterfaceTestbed

./: .gitignore  AllProjects.sln  Readme.md  buildall.sh
Shared/Include/: DllHelper.h  ISolverNode.h  Solver.h
Solver/: CMakeLists.txt  Solver.cpp  Solver.sln  Solver.vcxproj  Solver.vcxproj.filters  dllmain.cpp  framework.h
SolverTests/: CMakeLists.txt  SolverTests.vcxproj  build.sh  main.cpp  pch.h  test.cpp
Testbed/: CMakeLists.txt  Testbed.cpp  Testbed.sln  Testbed.vcxproj  Testbed.vcxproj.filters
